# MultiAxisController_ST3215

./: .gitignore  README.md  readme.md  requirements.txt
MultiAxisSystem/: ArmController.py  ControllerArm.py  ControllerArm7F.py  ControllerDog12F.py  ControllerDog4F.py  ControllerDog8F.py  ControllerOne.py  ControllerSpider12.py  ControllerSpider12F.py  DogController.py  MultiAxisController copy.py  MultiAxisController.py  MultiAxisControllerSerial.py  MultiAxisControllerUDP.py  MultiAxisControllerUSB.py  (+1 more)
drivers/: pyproject.toml  readme.md
drivers/src/multiaxis_driver/: __init__.py
drivers/src/multiaxis_driver/elrs/: ELRSDriver.py  __init__.py
drivers/src/multiaxis_driver/imu/: __init__.py  imu_driver.py  imu_driver_origin.py
drivers/src/multiaxis_driver/imu/lib/: __init__.py  device_model.py
drivers/src/multiaxis_driver/imu/lib/data_processor/: __init__.py
drivers/src/multiaxis_driver/imu/lib/data_processor/interface/: __init__.py
drivers/src/multiaxis_driver/imu/lib/data_processor/roles/: __init__.py
drivers/src/multiaxis_driver/imu/lib/protocol_resolver/: __init__.py
drivers/src/multiaxis_driver/imu/lib/protocol_resolver/interface/: __init__.py
drivers/src/multiaxis_driver/imu/lib/protocol_resolver/roles/: __init__.py  protocol_485_resolver.py  wit_protocol_resolver.py
drivers/src/multiaxis_driver/imu/lib/utils/: __init__.py
drivers/src/multiaxis_driver/motor/: MultiAxisController.py  MultiAxisControllerSerial.py  MultiAxisControllerUDP.py  MultiAxisControllerUSB.py  __init__.py
drivers/src/multiaxis_driver/motor/STservo_sdk/: sts.py
(+157 files in other folders)
