[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multiaxis-driver"
version = "0.1.0"
description = "Reusable hardware drivers for ST3215 multi-axis systems"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.4",
    "pyserial>=3.5",
]

[tool.setuptools.packages.find]
where = ["src"]
